@@ -1,73 +1,61 @@
 package com.dduongdev.repositories.inmemory;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
 import com.dduongdev.entities.Post;
 import com.dduongdev.entities.PostApprovalStatus;
-import com.dduongdev.entities.UserFollow;
 import com.dduongdev.repositories.PostRepository;
-import com.dduongdev.repositories.UserFollowRepository;
 
 @Repository
 public class InMemoryPostRepository implements PostRepository {
-	private static List<Post> storedPosts;
-	private static UserFollowRepository userFollowRepository;
-	
-	static {
-		storedPosts = new ArrayList<>();
-		userFollowRepository = new InMemoryUserFollowRepository();
-		
-		for (int i = 1; i <= 50; i++) {
-            storedPosts.add(new Post(
-                i,
-                "Post Title " + i,
-                "This is the body of post number " + i + ".",
-                1,
-                PostApprovalStatus.APPROVED,
-                LocalDateTime.now().minusDays(i)
-            ));
-        }
-	}
-	
-	@Override
-	public List<Post> findLatestByFollowedUsersPaged(int userId, int pageIndex, int pageSize) {
-		List<Integer> followings = userFollowRepository.findByFollowerId(userId)
-									.stream().map(UserFollow::getFollowingId).toList();
-		return storedPosts.stream()
-				.filter(post -> followings.contains(post.getUserId()) && post.getApprovalStatus() == PostApprovalStatus.APPROVED)
-				.sorted((p1, p2) -> p2.getCreatedAt().compareTo(p1.getCreatedAt()))
-				.skip((long) pageIndex * pageSize)
-				.limit(pageSize)
-				.toList();
-	}
+    
+    @Override
+    public List<Post> findLatestApprovedByFollowingUsersPaged(int userId, int pageIndex, int pageSize) {
+        List<Integer> followingUserIds = InMemoryDatabase.userFollows.stream()
+            .filter(follow -> follow.getFollowerId() == userId)
+            .map(follow -> follow.getFollowingId())
+            .collect(Collectors.toList());
 
-	@Override
-	public void save(Post post) {
-		storedPosts.add(post);
-	}
+        List<Post> approvedPosts = InMemoryDatabase.posts.stream()
+            .filter(post -> followingUserIds.contains(post.getUserId()) && post.getApprovalStatus() == PostApprovalStatus.APPROVED)
+            .sorted((p1, p2) -> p2.getCreatedAt().compareTo(p1.getCreatedAt())) 
+            .collect(Collectors.toList());
 
-	@Override
-	public void update(Post post) {}
+        int fromIndex = pageIndex * pageSize;
+        int toIndex = Math.min(fromIndex + pageSize, approvedPosts.size());
 
-	@Override
-	public Optional<Post> findById(int id) {
-		return storedPosts.stream()
-                .filter(post -> post.getId() == id)
-                .findFirst();
-	}
+        return fromIndex < approvedPosts.size() ? approvedPosts.subList(fromIndex, toIndex) : List.of();
+    }
 
-	@Override
-	public void delete(int id) {
-		Optional<Post> foundPostOpt = storedPosts.stream()
-                .filter(post -> post.getId() == id)
-                .findFirst();
-		if (foundPostOpt.isPresent()) {
-			storedPosts.remove(foundPostOpt.get());			
-		}
-	}
+    @Override
+    public void save(Post post) {
+    	post.setId(InMemoryDatabase.currentPostIndex);
+    	InMemoryDatabase.currentPostIndex++;
+        InMemoryDatabase.posts.add(post);
+    }
+
+    @Override
+    public void update(Post post) {
+        findById(post.getId()).ifPresent(existingPost -> {
+            existingPost.setTitle(post.getTitle());
+            existingPost.setBody(post.getBody());
+            existingPost.setApprovalStatus(post.getApprovalStatus());
+        });
+    }
+
+    @Override
+    public Optional<Post> findById(int id) {
+        return InMemoryDatabase.posts.stream()
+            .filter(post -> post.getId() == id)
+            .findFirst();
+    }
+
+    @Override
+    public void delete(int id) {
+        InMemoryDatabase.posts.removeIf(post -> post.getId() == id);
+    }
 }
